clippy_output3.txt
    Blocking waiting for file lock on build directory
    Checking rollball-gateway v0.1.0 (F:\work\tranxon\rollball-ai\core\rollball-gateway)
    Checking rollball-runtime v0.1.0 (F:\work\tranxon\rollball-ai\core\rollball-runtime)
error[E0425]: cannot find value `state` in this scope
   --> rollball-gateway\tests\s4_publish_e2e.rs:326:5
    |
317 |     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |         ------ `_state` defined here
...
326 |     state.write().await.add_installed(AgentInfo {
    |     ^^^^^
    |
help: the leading underscore in `_state` marks it as unused, consider renaming it to `state`
    |
317 -     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
317 +     let state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |

error[E0425]: cannot find value `state` in this scope
   --> rollball-gateway\tests\s4_publish_e2e.rs:357:5
    |
348 |     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |         ------ `_state` defined here
...
357 |     state.write().await.add_installed(AgentInfo {
    |     ^^^^^
    |
help: the leading underscore in `_state` marks it as unused, consider renaming it to `state`
    |
348 -     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
348 +     let state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |

error[E0425]: cannot find value `state` in this scope
   --> rollball-gateway\tests\s4_publish_e2e.rs:401:5
    |
392 |     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |         ------ `_state` defined here
...
401 |     state.write().await.add_installed(AgentInfo {
    |     ^^^^^
    |
help: the leading underscore in `_state` marks it as unused, consider renaming it to `state`
    |
392 -     let _state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
392 +     let state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |

error: unused variable: `config`
   --> rollball-gateway\tests\s4_publish_e2e.rs:425:9
    |
425 |     let config = test_gateway_config(&temp);
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`
    |
    = note: `-D unused-variables` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(unused_variables)]`

error: unused variable: `state`
   --> rollball-gateway\tests\s4_publish_e2e.rs:426:9
    |
426 |     let state: SharedState = Arc::new(RwLock::new(GatewayState::new(&temp.join("state").to_string_lossy())));
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`

error: unused variable: `config`
   --> rollball-gateway\tests\s4_publish_e2e.rs:455:9
    |
455 |     let config = test_gateway_config(&temp);
    |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `rollball-gateway` (test "s4_publish_e2e") due to 6 previous errors
warning: build failed, waiting for other jobs to finish...
